<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/db1"
            android:title="@string/navItem1"
            android:icon="@drawable/ic_menu"/>

        <item
            android:id="@+id/db2"
            android:title="@string/navItem2"
            android:icon="@drawable/ic_searched"/>

    </group>


    <item android:title="Profile">
        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/db3"
                    android:title="@string/navItem8"
                    android:icon="@drawable/ic_login"/>
                <item
                    android:id="@+id/db4"
                    android:title="@string/navItem9"
                    android:icon="@drawable/ic_person"/>
                <item
                    android:id="@+id/db5"
                    android:title="@string/navItem7"
                    android:icon="@drawable/ic_shopping"/>

                <item
                    android:id="@+id/db6"
                    android:title="@string/navItem4"
                    android:icon="@drawable/ic_shopping"/>

                <item
                    android:id="@+id/db7"
                    android:title="@string/navItem5"
                    android:icon="@drawable/ic_payment"/>
                <item
                    android:id="@+id/db9"
                    android:title="@string/navItem3"
                    android:icon="@drawable/ic_settings"/>

            </group>
        </menu>
    </item>

    <item android:title="Share">
        <menu>
            <group
                android:checkableBehavior="none">
                <item
                    android:id="@+id/db8"
                    android:title="@string/navItem6"
                    android:icon="@drawable/ic_contacts"/>

                <item
                    android:id="@+id/db10"
                    android:title="@string/navItem10"
                    android:icon="@drawable/ic_star"/>

            </group>
        </menu>
    </item>










</menu>