<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard"
    android:background="@drawable/login_design"
    android:animateLayoutChanges="true">


    <ImageView
        android:id="@+id/imageLogo_Login"
        android:layout_width="123dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="270dp"
        android:layout_marginRight="270dp"
        android:contentDescription="@string/tittle_login"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/text1_Login"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_below="@+id/imageLogo_Login"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="238dp"
        android:layout_marginRight="238dp"
        android:fontFamily="sans-serif-medium"
       android:text="@string/tittle_login"
        android:textColor="@color/colorAllBlack"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/RL1_Login"
        android:layout_width="391dp"
        android:layout_height="436dp"
        android:layout_below="@+id/text1_Login"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="38dp"
        tools:ignore="DuplicateIds">


        <LinearLayout
            android:id="@+id/LL1_Login"
            android:layout_width="356dp"
            android:layout_height="165dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text2_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:text="@string/userName"
                android:textAllCaps="true"
                android:textColor="@color/colorAllBlack"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ET1_Login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_bg"
                android:ems="10"
                android:fontFamily="@font/adamina"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/colorAllBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text3_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/adamina"
                android:text="@string/prompt_password"
                android:textAllCaps="true"
                android:textColor="@color/colorAllBlack"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ET2_Login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_bg"
                android:ems="10"
                android:fontFamily="@font/adamina"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/colorAllBlack"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button1_Login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/LL1_Login"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="62dp"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/btn_bg"
            android:textAllCaps="false"
            android:fontFamily="@font/adamina"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/btnLogin"
            android:textColor="@color/colorAllBlack"
            android:textStyle="bold"
            android:textSize="16sp" />
    </RelativeLayout>
</RelativeLayout>